--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.14.0",
+    "react-native-maps-directions": "^1.9.0",
+    "expo-dev-client": "~4.0.23"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
